Meeting with Zaikun

--- a/optimset.bib
+++ b/optimset.bib
@@ -5,6 +5,7 @@
     author       = {Audet, C. and Hare, W.},
     series       = {Springer Ser. Oper. Res. Financ. Eng.},
     publisher    = {Springer},
+    address      = {Cham, Switzerland},
     year         = 2017,
 }
 
@@ -31,6 +32,7 @@
     author       = {Conn, A. R. and Gould, N. I. M. and Toint, Ph. L.},
     series       = {MPS-SIAM Ser. Optim.},
     publisher    = {SIAM},
+    address      = {Philadelphia, PA, USA},
     year         = 2000,
 }
 
@@ -39,6 +41,7 @@
     author       = {Conn, A. R. and Scheinberg, K. and Toint, Ph. L.},
     booktitle    = {Proceedings of the 7th AIAA/USAF/NASA/ISSMO Symposium on Multidisciplinary Analysis and Optimization},
     publisher    = {AIAA},
+    address      = {St.\ Louis, MO, USA},
     pages        = {129--139},
     year         = 1998,
 }
@@ -48,6 +51,7 @@
     author       = {Conn, A. R. and Scheinberg, K. and N. Vicente, L.},
     series       = {MPS-SIAM Ser. Optim.},
     publisher    = {SIAM},
+    address      = {Philadelphia, PA, USA},
     year         = 2009,
 }
 
@@ -57,6 +61,7 @@
     booktitle    = {Advances and Trends in Optimization with Engineering Applications},
     editor       = {Terlaky, T. and Anjos, M. F. and Ahmed, S.},
     publisher    = {SIAM},
+    address      = {Philadelphia, PA, USA},
     pages        = {495--506},
     year         = 2017,
 }
@@ -93,6 +98,7 @@
     author       = {Gazaix, A. and Gallard, F. and Ambert, V. and Gu{\'{e}}not, D. and Hamadi, M. and Grihon, S. and Sarouille, P. and Druot, T. and Brezillon, J. and Gachelin, V. and Plakoo, J. and Desfachelles, N. and Bartoli, N. and Lefebvre, T. and G{\"{u}}rol, S. and Pauwels, B. and Vanaret, C. and Lafage, R.},
     booktitle    = {AIAA Aviation 2019 Forum},
     publisher    = {AIAA},
+    address      = {Dallas, TX, USA},
     year         = 2019,
 }
 
@@ -101,6 +107,7 @@
     author       = {Ghanbari, H. and Scheinberg, K.},
     number       = {17T-005},
     institution  = {COR@L},
+    address      = {Bethlehem, PA, USA},
     year         = 2017,
 }
 
@@ -155,6 +162,7 @@
     booktitle    = {Numerical Linear Algebra and Optimization},
     editor       = {Yuan, Y.},
     publisher    = {Science Press},
+    address      = {Beijing, China},
     pages        = {56--78},
     year         = 2004,
 }
@@ -166,6 +174,7 @@
     editor       = {{Di Pillo}, G. and Roma, M.},
     series       = {Nonconvex Optimization and Its Applications},
     publisher    = {Springer},
+    address      = {Boston, MA, USA},
     volume       = 83,
     pages        = {255--297},
     year         = 2006,
@@ -176,6 +185,7 @@
     author       = {Powell, M. J. D.},
     number       = {DAMTP 2009/NA06},
     institution  = {Department of Applied Mathematics and Theoretical Physics, University of Cambridge},
+    address      = {Cambridge, UK},
     year         = 2009,
 }
 
@@ -201,6 +211,7 @@
     title        = {Model-Based Derivative-Free Optimization Methods and Software},
     author       = {Ragonneau, T. M.},
     school       = {Department of Applied Mathematics, The Hong Kong Polytechnic University},
+    address      = {Hong Kong, China},
     year         = 2022,
 }
 
@@ -224,6 +235,7 @@
     title        = {{MNH}: a derivative-free optimization algorithm using minimal norm {Hessians}},
     author       = {Wild, S. M.},
     booktitle    = {The Tenth Copper Mountain Conference on Iterative Methods},
+    address      = {Copper Mountain, CO, USA},
     year         = 2008,
 }
 
@@ -247,6 +259,7 @@
     title        = {On Derivative-Free Optimization Methods \textnormal{(in Chinese)}},
     author       = {Zhang, Z.},
     school       = {Chinese Academy of Sciences},
+    address      = {Beijing, China},
     year         = 2012,
 }
 
