--- a/optimset.tex
+++ b/optimset.tex
@@ -173,6 +173,7 @@
 
 % Reviewing
 \newcommand{\reviewed}[1]{\texorpdfstring{{\color{NavyBlue}#1}}{#1}}
+% \newcommand{\reviewed}[1]{#1}
 
 % Headings
 \title{An Optimal Interpolation Set for Model-Based Derivative-Free Optimization Methods}
@@ -217,7 +218,8 @@ Examples of such problems arise from many areas, such as reinforcement learning~
 The \gls{dfo} literature is vast.
 For comprehensive overviews, we refer to the monographs~\cite{Conn_Scheinberg_Vicente_2009,Audet_Hare_2017}, the survey papers~\cite{Powell_1975,Powell_1998,Rios_Sahinidis_2013,Custodio_Scheinberg_Vicente_2017,Larson_Menickelly_Wild_2019}, the recent thesis~\cite{Ragonneau_2022}, and the references therein.
 
-This paper studies a set employed as the initial interpolation set by many derivative-free trust-region methods~\cite{Conn_Gould_Toint_2000,Yuan_2015} based on underdetermined quadratic interpolation, such as NEWUOA~\cite{Powell_2006}, \reviewed{the method of Conejo, Karas, and Pedroso~\cite{Conejo_Karas_Pedroso_2015},} and, when no constraints are present, BOBYQA~\cite{Powell_2009}, LINCOA, and COBYQA~\cite{Ragonneau_2022,Ragonneau_Zhang_2023}.
+This paper studies a set employed as the initial interpolation set by many derivative-free trust-region methods~\cite{Conn_Gould_Toint_2000,Yuan_2015} based on underdetermined quadratic interpolation, such as NEWUOA~\cite{Powell_2006}, and, when no constraints are present, BOBYQA~\cite{Powell_2009}, LINCOA, and COBYQA~\cite{Ragonneau_2022,Ragonneau_Zhang_2023}.
+\reviewed{It is also employed by~\cite{Conejo_Karas_Pedroso_2015} in a method for constrained problems.}
 We show that this interpolation set is optimal in the sense that it minimizes the constant of well-poisedness in a ball centred at the starting point, which is detailed in Theorem~\ref{thm:optimset}.
 
 In what follows, we denote by~$\qpoly$ the space of polynomials on~$\R^n$ of degree at most two, which will be referred to as quadratic polynomials for simplicity.
@@ -230,7 +232,7 @@ Clearly, if the interpolation conditions~\eqref{eq:intp-cond} do not contradict 
 \begin{equation*}
     \card(\xpt[k]) = \dim(\qpoly) = \frac{1}{2} (n + 1) (n + 2).
 \end{equation*}
-Such a scheme, referred to as the fully-determined quadratic interpolation, is used \reviewed{for example} by UOBYQA~\cite{Powell_2002}.
+Such a scheme, referred to as the fully-determined quadratic interpolation, is used, \reviewed{for example,} by UOBYQA~\cite{Powell_2002}.
 However, the first iteration of this method requires~$\bigo(n^2)$ function evaluations to construct the initial model~$\objm[@0]$.
 This \reviewed{is impracticable} unless~$n$ is small.
 Therefore, modern interpolation-based \gls{dfo} methods work with fewer interpolation points, giving rise to the underdetermined quadratic interpolation.
@@ -285,7 +287,7 @@ Section~\ref{sec:conclusion} concludes this paper.
 
 In this section, we consider an interpolation set
 \begin{equation*}
-    \xpt = \set{y^1, y^2, \dots, y^m} \subseteq \R^n
+    \xpt = \set{y^1, @@ y^2, @@ \dots, @@ y^m} \subseteq \R^n
 \end{equation*}
 and the interpolation problem
 \begin{equation}
@@ -315,11 +317,11 @@ To formally define a measure of well-poisedness of~$\xpt$, we first need to exte
 \begin{definition}[\reviewed{Minimum Frobenius norm} Lagrange polynomials~{\cite[Definition~5.1]{Conn_Scheinberg_Vicente_2009}}]
     \label{def:min-norm-lagp}
     Assume that the interpolation set~$\xpt$ is poised.
-    The~$i$th \emph{\reviewed{minimum Frobenius norm} Lagrange polynomial}~$\lagp[i]$ for the interpolation problem~\eqref{eq:intp-cond-gen}, with~$i \in \set{1, 2, \dots, m}$, is the unique quadratic polynomial that solves
+    The~$i$th \emph{\reviewed{minimum Frobenius norm} Lagrange polynomial}~$\lagp[i]$ for the interpolation problem~\eqref{eq:intp-cond-gen}, with~$i \in \set{1, @@ 2, @@ \dots, @@ m}$, is the unique quadratic polynomial that solves
     \begin{equation*}
         \begin{aligned}
             \min_{Q \in \qpoly} & \quad \norm[\big]{\nabla^2 Q}_{\mathsf{F}}\\
-            \text{s.t.}         & \quad Q(y^j) = \delta_{i, j}, \quad j \in \set{1, 2, \dots, m},
+            \text{s.t.}         & \quad Q(y^j) = \delta_{i, j}, \quad j \in \set{1, @@ 2, @@ \dots, @@ m},
         \end{aligned}
     \end{equation*}
     where~$\delta_{i, j}$ denotes the Kronecker delta.
@@ -367,7 +369,7 @@ Finally, we point out that the default setting in Powell's methods renders an op
 The initial interpolation that Powell designed for his methods is as follows.
 Without loss of generality, we assume that the starting point is at the origin.
 Suppose that~$\Delta > 0$ is the initial trust-region radius.
-For~$i \in \set{1, 2, \dots, 2n + 1}$, define
+For~$i \in \set{1, @@ 2, @@ \dots, @@ 2n + 1}$, define
 \begin{equation}
     \label{eq:set-def}
     y^i =
@@ -383,9 +385,9 @@ We focus on the case with~$n + 2 \le m \le 2n + 1$ following Powell's suggestion
 The initial interpolation set is then chosen to be
 \begin{equation}
     \label{eq:set-def-m}
-    \xpt[0]_m = \set{y^1, y^2, \dots, y^m},
+    \xpt[0]_m = \set{y^1, @@ y^2, @@ \dots, @@ y^m},
 \end{equation}
-which can be found in~\cite[Equation~(3.2)]{Powell_2006}.
+which can be found in~\cite[eq.~(3.2)]{Powell_2006}.
 The default value for~$m$ proposed by Powell is~$2n + 1$.
 In other words, the default initial interpolation set is~$\xpt[0] = \xpt[0]_{2n + 1}$.
 This is a natural choice, as the corresponding interpolation set is geometrically appealing.
@@ -410,18 +412,18 @@ According to Definition~\ref{def:lambda-p}, the set~$\xpt[0]_m$ is~$\Lambda_p$-p
     \label{eq:Lambdap}
     \Lambda_p = \max_{1 \le i \le m} \max_{\norm{x}_p \le \Delta} @@ \abs[\big]{\lagp[i](x)},
 \end{equation}
-where~$\lagp[i]$, for~$i \in \set{1, 2, \dots, m}$, is the~$i$th \reviewed{minimum Frobenius norm} Lagrange polynomial associated with~$\xpt[0]_m$.
+where~$\lagp[i]$, for~$i \in \set{1, @@ 2, @@ \dots, @@ m}$, is the~$i$th \reviewed{minimum Frobenius norm} Lagrange polynomial associated with~$\xpt[0]_m$.
 Indeed, $\Lambda_p$ is the {constant of well-poisedness} of~$\xpt[0]_m$ in~$\mathcal{B}_p(\Delta)$.
 We will focus on this constant in what follows.
 
 \subsubsection{Formulation of the Lagrange polynomials}
 
-To study~$\Lambda_p$, we first present explicit formulae for~$\lagp[i]$ for all~$i \in \set{1, 2, \dots, m}$.
+To study~$\Lambda_p$, we first present explicit formulae for~$\lagp[i]$ for all~$i \in \set{1, @@ 2, @@ \dots, @@ m}$.
 These formulae are given in~\cite[\S~3]{Powell_2006} without proof.
 
 \begin{lemma}
     \label{lem:lagp}
-    \reviewed{For all~$x \in \R^n$ and~$m \in \set{n + 2, n + 3, \dots,  2n + 1}$, the expression of~$\lagp[i]$, for~$i \in \set{1, 2, \dots, m}$, is given by}
+    \reviewed{For all~$x \in \R^n$ and~$m \in \set{n + 2, @@ n + 3, @@ \dots,  @@ 2n + 1}$, the expression of~$\lagp[i]$, for~$i \in \set{1, @@ 2, @@ \dots, @@ m}$, is given by}
     \begin{equation}
         \label{eq:lagp}
         \lagp[i](x) =
@@ -432,29 +434,29 @@ These formulae are given in~\cite[\S~3]{Powell_2006} without proof.
             \displaystyle \reviewed{\frac{x_{i - n - 1}^2}{2\Delta^2} - \frac{x_{i -n- 1}}{2\Delta},}                                    & \text{\reviewed{if~$n+2\le i \le m$.}}
         \end{cases}
     \end{equation}
-    Here, $x_j$ denotes the~$j$th entry of~$x$ for each~$j \in \set{1, 2, \dots, n}$, and we define~$\sum_{j = m - n}^n x_j = 0$ in the formulation of~$\lagp[1]$ if~$m = 2n + 1$.
+    Here, $x_j$ denotes the~$j$th entry of~$x$ for each~$j \in \set{1, @@ 2, @@ \dots, @@ n}$, and we define~$\sum_{j = m - n}^n x_j = 0$ in the formulation of~$\lagp[1]$ if~$m = 2n + 1$.
 \end{lemma}
 
 \begin{proof}
-    Let~$i \in \set{1, 2, \dots, m}$ be fixed and let~$\lagp$ be a quadratic polynomial satisfying
+    Let~$i \in \set{1, @@ 2, @@ \dots, @@ m}$ be fixed and let~$\lagp$ be a quadratic polynomial satisfying
     \begin{equation}
         \label{eq:lagp-p}
-        \lagp(y^j) = \delta_{i, j}, \quad j \in \set{1, 2, \dots, m}.
+        \lagp(y^j) = \delta_{i, j}, \quad j \in \set{1, @@ 2, @@ \dots, @@ m}.
     \end{equation}
     First, it is straightforward to verify that~$\lagp[i]$ satisfies the interpolation conditions~\eqref{eq:lagp-p}.
     Hence, it suffices to show that~$\norm{\nabla^2 \lagp[i]}_\mathsf{F} \le \norm{\nabla^2 \lagp}_\mathsf{F}$.
 
-    Consider any~$j \in \set{1, 2, \dots, m - n - 1}$.
+    Consider any~$j \in \set{1, @@ 2, @@ \dots, @@ m - n - 1}$.
     Denote the $j$th diagonal entries of~$\nabla^2 \lagp$ and~$\nabla^2 \lagp[i]$ by~$(\nabla^2 \lagp)_{j, j}$ and~$(\nabla^2 \lagp[i])_{j, j}$, respectively.
     According to equation~\eqref{eq:set-def}, we have
     \begin{equation*}
         y^1 = 0, \quad y^{j + 1} = \Delta e_j, \quad \text{and} \quad y^{n + j + 1} = -\Delta e_j.
     \end{equation*}
-    Since~$\lagp$ and~$\lagp[i]$ are quadratic polynomials sharing the same values on~$\set{y^1, y^{j + 1}, y^{n + j + 1}}$, \reviewed{Taylor expansions of the quadratic polynomial~$\lagp$ around~$y^1$ yield}
+    Since~$\lagp$ and~\reviewed{$\lagp[i]$} are quadratic polynomials sharing the same values on~$\set{y^1, @@ y^{j + 1}, @@ y^{n + j + 1}}$, \reviewed{Taylor expansions of the quadratic polynomial~$\lagp$ around~$y^1$ yield}
     \begin{equation*}
         \big(\nabla^2 \lagp \big)_{j, j} = \frac{\lagp(y^{j + 1}) + \lagp(y^{n + j + 1}) - 2 \lagp(y^1)}{\Delta^2} = \big(\nabla^2 \lagp[i] \big)_{j, j}.
     \end{equation*}
-    On the other hand, it is easy to check \reviewed{according to the expression in~\eqref{eq:lagp}} that all the entries of~$\nabla^2 \lagp[i]$ are zero except for the first~$m-n-1$ diagonal entries.
+    On the other hand, it is easy to check \reviewed{according to~\eqref{eq:lagp}} that all the entries of~$\nabla^2 \lagp[i]$ are zero except for the first~$m-n-1$ diagonal entries.
     Therefore,
     \begin{equation*}
         \norm[\big]{\nabla^2 \lagp[i]}_{\mathsf{F}}^2 \le \norm[\big]{\nabla^2 \lagp}_{\mathsf{F}}^2,
@@ -468,7 +470,7 @@ The next lemma simplifies the expression of~$\Lambda_p$ defined in~\eqref{eq:Lam
 
 \begin{lemma}
     \label{lem:lambda-p}
-    For any~$m \in \set{n + 2, n + 3, \dots, 2n + 1}$ and any~$p \in [1, \infty]$, we have
+    For any~$m \in \set{n + 2, @@ n + 3, @@ \dots, @@ 2n + 1}$ and any~$p \in [1, \infty]$, we have
     \begin{equation}
         \label{eq:lambda-p}
         \Lambda_p = \max_{\norm{x}_p \le \Delta} @@ \abs[\big]{\lagp[1](x)}.
@@ -476,11 +478,11 @@ The next lemma simplifies the expression of~$\Lambda_p$ defined in~\eqref{eq:Lam
 \end{lemma}
 
 \begin{proof}
-    According to Lemma~\ref{lem:lagp}, for each~$i \in \set{2, 3, \dots, n + 1}$,~$\lagp[i](x)$ only depends on~$x_{i - 1}$ for all~$x \in \R^n$, and hence
+    According to Lemma~\ref{lem:lagp}, for each~$i \in \set{2, @@ 3, @@ \dots, @@ n + 1}$,~$\lagp[i](x)$ only depends on~$x_{i - 1}$ for all~$x \in \R^n$, and hence
     \begin{equation*}
         \max_{\norm{x}_p \le \Delta} @@ \abs[\big]{\lagp[i](x)} = \max_{t \in [-\Delta, \Delta]} @@ \abs[\big]{\lagp[i](t e_{i - 1})} = 1.
     \end{equation*}
-    Similarly, for each~$i \in \set{n + 2, n + 3, \dots, m}$, since~$\lagp[i](x)$ only depends on~$x_{i - n - 1}$ for all~$x \in \R^n$, we have
+    Similarly, for each~$i \in \set{n + 2, @@ n + 3, @@ \dots, @@ m}$, since~$\lagp[i](x)$ only depends on~$x_{i - n - 1}$ for all~$x \in \R^n$, we have
     \begin{equation*}
         \max_{\norm{x}_p \le \Delta} @@ \abs[\big]{\lagp[i](x)} = \max_{t \in [-\Delta, \Delta]} @@ \abs[\big]{\lagp[i](t e_{i - n - 1})} = 1.
     \end{equation*}
@@ -499,48 +501,53 @@ For \reviewed{convenience}, we define henceforth
 
 \begin{theorem}
     \label{thm:bounds}
-    For any~$m \in \set{n + 2, n + 3, \dots, 2n + 1}$ and any~$p \in [1, \infty]$, we have
+    For any~$m \in \set{n + 2, @@ n + 3, @@ \dots, @@ 2n + 1}$ and any~$p \in [1, \infty]$, we have
     \begin{equation}
-    \label{eq:bounds}
+        \label{eq:bounds}
         1 + (2n + 1 - m)^{\frac{p - 1}{p}} \le \Lambda_p \le n.
     \end{equation}
-    \reviewed{In particular, we have~$\Lambda_{\infty} = \max @ \set{n - 1, 2n - m + 2}$.}
+    \reviewed{In particular, we have~$\Lambda_{\infty} = \max @ \set{n - 1, @@ 2n - m + 2}$.}
 \end{theorem}
 
 \begin{proof}
-    We will establish the bounds using the formulation of~$\Lambda_p$ in Lemma~\ref{lem:lambda-p}.
+    We will establish the bounds \reviewed{in~\eqref{eq:bounds}} using the formulation of~$\Lambda_p$ in Lemma~\ref{lem:lambda-p}.
     For the lower bound, by considering only the points in~$\R^n$ whose leading~$m - n - 1$ entries are zeros and whose remaining~$2n + 1 - m$ entries are equal, we have
     \begin{equation*}
         \Lambda_p = \max_{\norm{x}_p \le \Delta} @@ \abs{\lagp[1](x)} \ge \max_{t \in \R} \set[\bigg]{1 - \frac{1}{\Delta} (2n + 1 - m) t : (2n + 1 - m)^{\frac{1}{p}}\abs{t} \le \Delta} = 1 + (2n + 1 - m)^{\frac{p - 1}{p}}.
     \end{equation*}
-
     We now establish the upper bound.
     For any~$p \ge 1$, we have~$\mathcal{B}_p(\Delta) \subseteq \mathcal{B}_{\infty}(\Delta)$, so that~$\Lambda_p \le \Lambda_{\infty}$.
-    Therefore, we only need to show that~$\Lambda_{\infty} = \reviewed{\max @ \set{n - 1, 2n - m + 2}} \le n$.
+    Therefore, we only need to show that~$\Lambda_{\infty} \le \reviewed{\max @ \set{n - 1, @@ 2n - m + 2}} \le n$.
     For any~$x \in \mathcal{B}_{\infty}(\Delta)$,
-    \begin{equation*}
+    \begin{equation}
+        \label{eq:bounds-proof-1}
         -\lagp[1](x) = -1 + \frac{1}{\Delta^2} \sum_{j = 1}^{m - n - 1} \!\! x_j^2 + \frac{1}{\Delta} \sum_{j = m - n}^n \!\! x_j \le n-1,
-    \end{equation*}
+    \end{equation}
     and
-    \begin{equation*}
+    \begin{equation}
+        \label{eq:bounds-proof-2}
         \lagp[1](x) = 1 - \frac{1}{\Delta^2} \sum_{j = 1}^{m - n - 1} \!\! x_j^2 - \frac{1}{\Delta} \sum_{j = m - n}^n \!\! x_j \le 1 -  \frac{1}{\Delta} \sum_{j = m - n}^n \!\! x_j \le 2n-m+2.
-    \end{equation*}
-    \reviewed{Since both these bounds can be attained in~$\mathcal{B}_{\infty}(\Delta)$, we thus have}
+    \end{equation}
+    Thus
     \begin{equation*}
-        \Lambda_{\infty} = \max_{\norm{x}_{\infty} \le \Delta} @@ \abs[\big]{\lagp[1](x)} \reviewed{= \max @ \set{n - 1, 2n - m + 2}},
+        \Lambda_{\infty} = \max_{\norm{x}_{\infty} \le \Delta} @@ \abs[\big]{\lagp[1](x)} \le \reviewed{\max @ \set{n - 1, @@ 2n - m + 2}},
     \end{equation*}
-    which completes the proof.
+    which completes the proof \reviewed{of~\eqref{eq:bounds}.
+
+    Finally, remark that the right-hand side in~\eqref{eq:bounds-proof-1} is attained by the vector whose entries are all~$\Delta$.
+    Moreover, the right-hand side in~\eqref{eq:bounds-proof-2} is attained by the vector whose first~$m - n - 1$ entries are zero and whose remaining entries are all~$-\Delta$.
+    Hence,~$\Lambda_{\infty} = \max @ \set{n - 1, @@ 2n - m + 2}$.}
 \end{proof}
 
 \subsubsection{Some special cases}
 
-\reviewed{Remark that Theorem~\ref{thm:bounds} provides an explicit formulation of~$\Lambda_{\infty}$, which is either~$n - 1$ or~$n$ since~$m \ge n + 2$.}
-There are more cases where we can calculate the value of~$\Lambda_p$, as we will detail in the following.
+\reviewed{Theorem~\ref{thm:bounds} provides the value of~$\Lambda_{\infty}$}, which is either~$n - 1$ or~$n$ since~$m \ge n + 2$.
+There are more cases where we can \reviewed{evaluate}~$\Lambda_p$, as we will detail in the following.
 First, when~$1 \le p \le 2$, $\Lambda_p$ actually equals the lower bound in~\eqref{eq:bounds}.
 
 \begin{proposition}
     \label{prop:lambda-p-2}
-    For any~$m \in \set{n + 2, n + 3, \dots, 2n + 1}$ and any~$p \in[1, 2]$, we have
+    For any~$m \in \set{n + 2, @@ n + 3, @@ \dots, @@ 2n + 1}$ and any~$p \in[1, 2]$, we have
     \begin{equation}
         \label{eq:lambda-p-2}
         \Lambda_p = 1 + (2n + 1 - m)^{\frac{p - 1}{p}}.
@@ -578,7 +585,7 @@ To this end, recall the following elementary fact.
     For any~$p \in [1, \infty]$ and $q \in [1, \infty]$, we have
     \begin{equation}
         \label{eq:max-norm-pq}
-        \max_{\norm{x}_q \le 1} @@ \norm{x}_p = \max @ \set{1, n^{\frac{1}{p} - \frac{1}{q}}}.
+        \max_{\norm{x}_q \le 1} @@ \norm{x}_p = \max @ \set{1, @@ n^{\frac{1}{p} - \frac{1}{q}}}.
     \end{equation}
 \end{lemma}
 
@@ -618,7 +625,7 @@ To this end, recall the following elementary fact.
     Moreover, according to Lemma~\ref{lem:max-norm-pq}, we have
     \begin{equation}
         \label{eq:lambda-p-inf-p-2}
-        \max_{\norm{x}_p \le \Delta} @ -\lagp[1](x) = \max_{\norm{x}_p \le \Delta} @ \big( \Delta^{-2} \norm{x}_2^2 - 1 \big) = \reviewed{\max_{\norm{x}_p \le 1} @@ \norm{x}_2^2 - 1} = \max @ \set{0, n^{\frac{p - 2}{p}} - 1}.
+        \max_{\norm{x}_p \le \Delta} @ -\lagp[1](x) = \max_{\norm{x}_p \le \Delta} @ \big( \Delta^{-2} \norm{x}_2^2 - 1 \big) = \reviewed{\max_{\norm{z}_p \le 1} @@ \norm{z}_2^2 - 1} = \max @ \set{0, @@ n^{\frac{p - 2}{p}} - 1}.
     \end{equation}
     The desired result is obtained by combining~\eqref{eq:lambda-p-inf-p-1} and~\eqref{eq:lambda-p-inf-p-2} with Lemma~\ref{lem:lambda-p}.
 \end{proof}
@@ -645,7 +652,7 @@ Recall that $p = 2$ is of interest for most trust-region \gls{dfo} methods, incl
     Thus, the theorem holds.
 \end{proof}
 It is worth mentioning that Proposition~\ref{prop:lambda-p-2} also implies that~$\xpt[0]_{2n + 1}$ renders~$\Lambda_p = 1$ for~$p \in [1, 2]$.
-\reviewed{Theorem~\ref{thm:optimset} shows that this is true for a larger range of~$p$.}
+\reviewed{Theorem~\ref{thm:optimset} shows that the equality holds for a larger range of~$p$, because the right-hand side in~\eqref{eq:pineq} is greater than~$2$ when~$n > 2$.}
 
 \subsubsection{Remarks and open questions}
 
@@ -655,7 +662,7 @@ Thus, it is natural to ask whether~$2n+1$ minimizes~$\Lambda_p$ for any~$p \ge 1
 
 The definition of~$\xpt[0]_m$ in~\eqref{eq:set-def} and~\eqref{eq:set-def-m} assumes that~$m \le 2n + 1$.
 Even though larger values of~$m$ are not recommended in practice, Powell~\cite{Powell_2006} proposed an extension of~$\xpt[0]_m$ for~$m > 2n + 1$.
-With such an extension, we can define~$\Lambda_p$ by~\eqref{eq:Lambdap} for any~$m \in \set{n + 2, n +  3, \dots, (n + 1)(n + 2) / 2}$.
+With such an extension, we can define~$\Lambda_p$ by~\eqref{eq:Lambdap} for any~$m \in \set{n + 2, @@ n +  3, @@ \dots, @@ (n + 1)(n + 2) / 2}$.
 It is interesting to ask whether~$2n + 1$ still minimizes~$\Lambda_p$ for any~$p \ge 1$ after the extension.
 We expect that the analysis will be more challenging than what we have done.
 One of the challenges is that Lemma~\ref{lem:lambda-p} does not hold when~$m > 2n + 1$, and hence, the estimations of~$\Lambda_p$ will become more involved.
@@ -668,7 +675,7 @@ paragraphs is true, and~$\xpt[0]_{2n + 1}$ is an optimal interpolation set in~$\
 \section{Conclusion}
 \label{sec:conclusion}
 
-We have analyzed the well-poisedness \reviewed{in the minimum Frobenius norm sense} of an interpolation set that appears in many trust-region \gls{dfo} methods, particularly those by Powell\reviewed{~\cite{Powell_2006,Powell_2009}}.
+We have analyzed the well-poisedness \reviewed{(in the minimum Frobenius norm sense)} of an interpolation set that appears in many trust-region \gls{dfo} methods, particularly those by Powell\reviewed{~\cite{Powell_2006,Powell_2009}}.
 It is proved to be an optimal interpolation set under the default setting, because it minimizes the constant of well-poisedness in a ball centred at the starting point.
 Our analysis justifies the natural configuration of this set from the viewpoint of interpolation theory.
 
@@ -676,8 +683,12 @@ The spirit of our analysis is similar to that of~\cite{Dodangeh_Vicente_Zhang_20
 While proving nothing surprising, this kind of investigation deepens our understanding of certain algorithmic strategies that we often employ but rarely ask why.
 
 \paragraph*{Acknowledgement}
-This paper corresponds to Section~2.5 of the first author's PhD thesis~\cite{Ragonneau_2022}, co-supervised by the second author and Professor Xiaojun Chen from The Hong Kong Polytechnic University.
+This paper corresponds to Section~2.5 of the PhD thesis of Tom M. Ragonneau~\cite{Ragonneau_2022}, co-supervised by Zaikun Zhang and Professor Xiaojun Chen from The Hong Kong Polytechnic University.
 Both authors are very grateful to Professor Chen for her support, encouragement, and guidance during the thesis.
+\reviewed{Zaikun Zhang would like to thank the late Professor Oleg Burdakov for his friendship.}
+
+\paragraph*{Disclosure statement}
+The authors report that there are no competing interests to declare.
 
 \paragraph*{Funding} This work was funded by the University Grants Committee of Hong Kong under the projects PF18-24698 (Hong Kong PhD Fellowship Scheme), PolyU 253012/17P, PolyU 153054/20P, and PolyU 153066/21P. It was also supported by The Hong Kong Polytechnic University under project P0009767.
 
